2003-10-10  Jaka Mocnik  <jaka@fish>

	* src/gtkhex.c (gtk_hex_update_auto_highlight): moved cur declaration
	to beginning of the block!

2003-10-08  David Hammerton <crazney@crazney.net>

	* Add find high-lighting: Occuranced of a search which are visible
	are now highlighted red. Also added an 'advanced find' dialog
	box to allow for multiple searches at once (with different
	highlighting colours).
	* src/hex-dialog.c: Internationalize conversion dialog strings.
	* src/gtkhex.c: Don't display the char 0x7f in the ascii window,
	to avoid corrupt output.

2003-09-25  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch for the type dialog by David Hammerton. thank
	the guy for some great work!
	* Makefile.am: added new stuff to build.
	* configure.in: bumped version to 2.5.0

2003-09-10  Jaka Mocnik  <jaka@gnu.org>

	* src/Makefile.am: removed redundant -DGHEX_UI_DIR and
	-DGHEX_GLADEDIR CFLAGS!
	* configure.in: bumped version to 2.4.0.1; tag GHEX_2_4_0_1;
	fixes problems with installation of locale files.

2003-09-01  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c: applied a patch from Kaushal Kumar: Check on
	close if the current file was deleted, and prompt for a save to
	avoid a possible data loss. fixes #119855.
	(ghex_window_save_as): put warning dialog on top. fixes #119707.
	patch by Shakti Sen.

2003-08-18  Stanislav Brabec  <sbrabec@suse.cz>

	* Makefile.am: Added xmldocs.make to EXTRA_DIST (needed for
	autoreconf).

2003-08-12  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c: applied patch by Shakti Sen to prevent NULL
	filenames.
	* src/main.c: dont crash if a document fails to open because of
	lack of memory.

2003-05-14  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-05-28  Danilo Segan <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
	
2003-05-24  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: don't retain the previous file name when opening a new